6-todo-service/kubernetes/4-applications/mongodb-with-persistence.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: applications
spec:
  selector:
    app: mongodb-label
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: applications
  labels:
    app: mongodb-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-label
  template:
    metadata:
      labels:
        app: mongodb-label
    spec:
      volumes:
        - name: mongodb-pv-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
      containers:
        - name: mongo
          image: mongo
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          ports:
            - containerPort: 27017
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-pv-storage
          env:
            - name: MONGO_INITDB_ROOT_USERNAME
              value: "root"
            - name: MONGO_INITDB_ROOT_PASSWORD
              value: "example"
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
